# libmail

./: .gitignore  .gitmodules  Makefile.am  README  configure.ac
build-mac/: Info.plist  update.sh
build-mac/libmail.xcodeproj/: project.pbxproj
build-mac/libmail.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
build-mac/other/: Prefix.pch
src/: imap.c  imap.h  libmail.c  libmail.h  mail_types.h  oxws.c  oxws.h
